[package]
name = "ralph-rs"
version = "0.1.5"
edition = "2024"
description = "Deterministic execution planner and orchestrator for coding agents"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = "0.28"
dirs = "6"
ratatui = "0.29"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
